<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="4dp"
        android:text="@string/activity_main"
        android:textSize="10sp"/>

    <TextView
        android:id="@+id/text_subject"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="18sp"
        android:text="@string/subject"/>

    <EditText
        android:id="@+id/editText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/button_pick_me_up"/>

    <TextView
        android:id="@+id/text_place"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:textSize="18sp"
        android:text="@string/place"/>

    <RadioGroup
        android:id="@+id/pickup_radio_group"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <RadioButton
            android:id="@+id/radio_button_station"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="true"
            android:text="@string/place_station"/>

        <RadioButton
            android:id="@+id/radio_button_school"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/place_school"/>

        <RadioButton
            android:id="@+id/radio_button_always"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/place_always"/>
    </RadioGroup>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="8dp"
        android:gravity="center">
        <TextView
            android:id="@+id/button_send"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="12dp"
            android:paddingRight="12dp"
            android:paddingTop="4dp"
            android:paddingBottom="4dp"
            android:text="@string/button_send"
            android:textColor="@android:color/white"
            android:background="@color/colorAccent"/>
    </LinearLayout>




</LinearLayout>